quality of life changes

--- a/src/components/thanksComponent/Thanks.css
+++ b/src/components/thanksComponent/Thanks.css
@@ -35,3 +35,8 @@
     color: hsl(217, 12%, 63%);
     font-size: 15px;
 }
+.buttonContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
