--- a/src/components/submitComponent/Form.css
+++ b/src/components/submitComponent/Form.css
@@ -6,6 +6,7 @@
     justify-content: space-evenly;
     align-items: center;
     margin-left: -5%;
+    margin-top: -10%;
 }
 
 .itemContainer{
@@ -21,34 +22,23 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;   
     cursor: pointer;
     transition: .1s all ease-in-out;
+    font-size: 18px;
 }
 .itemContainer:hover{
     background-color:hsl(216, 12%, 54%) ;
+    transform: scale(1.1);
+}
+
+.form-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -2%;
+    margin-top: 5%;
 }
 
 .active{
     background-color: hsl(25, 97%, 53%);
-}
-
-.form-button{
-    width: 100%;
-    margin-top: 9%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.form-button button{
-    width: 90%;
-    height: 6vh;
-    border-radius: 50px;
-    border: transparent;
-    background-color: hsl(25, 97%, 53%);
-    color: white;
-    font-size: 15px;
-    cursor: pointer;
-    transition: .2s all ease-in-out;
-}
-.form-button button:hover{
-    background-color: white;
-    color: hsl(25, 97%, 53%);
+    transform: scale(1.2);
+    font-size: 22px;
 }
